# rush

./: Cargo.toml  README.md
src/: commands.rs  main.rs
src/commands/: echo.rs  ls.rs
src/utils/: environment.rs
tests/: cli.rs
