[package]
name = "rush"
version = "0.1.0"
authors = ["Matt Merkes <matt.merkes@gmail.com>"]
edition = "2024"

[[bin]]
name = "rush"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"